# pokemon-tcgp-data-lake

./: .dockerignore  README.md  agents.md  docker-compose.yaml  docker-compose.yml  pokemon_tcg_pipeline.duckdb  pyproject.toml
.dlt/: config.toml
.github/workflows/: ci.yml
ingestion/: Dockerfile  configs.py  constants.py  extractor.py  extractors.py  http_client.py  load.py  main.py  models.py  payload.py  pyproject.toml
pokemon_cli/: Dockerfile  README.md  config.py  controller.py  main.py  models.py  pyproject.toml
pokemon_cli/gateways/: __init__.py  llm.py  mcp.py
pokemon_cli/gateways/strategies/: __init__.py  base.py  gemini.py  ollama.py  openai.py
pokemon_cli/tests/: test_controller.py  test_llm_gateway.py  test_ollama_strategy.py  test_ollama_thinking.py
scrape/: main.py
semantic_layer/: Dockerfile  mcp_config_guide.md  profiles.yml  pyproject.toml
semantic_layer/semantic_layer/: boring.yml  mcp_server.py  test_queries.py
transformations/: .gitignore  .sqlfluff  Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml
transformations/analysis/: matchup.sql
transformations/models/: sources.yml
transformations/models/consumption/: mart_archetype_card_staples.sql  mart_archetype_matchup_suggestions.sql  mart_archetype_matchups.sql  mart_archetype_stats.sql  mart_cards_used.sql  mart_deck_analysis.sql  mart_monthly_meta_shifts.sql  mart_player_lifetime_stats.sql  mart_tournament_analysis.sql  schema.yml
transformations/models/semantic/: dim_cards.sql  dim_deck_archetypes.sql  dim_participants.sql  dim_pokemon_sets.sql  dim_tournaments.sql  fct_deck_composition.sql  fct_matches.sql  schema.yml
transformations/models/staging/: schema.yml  stg_deck_cards.sql  stg_matches.sql  stg_participants.sql  stg_tournaments.sql
transformations/seeds/: meta_decks.csv  pokemon_sets.csv
transformations/tests/: assert_non_pokemon_card_codes_are_null.sql  assert_non_pokemon_card_identity_has_single_key.sql  assert_pokemon_card_codes_are_not_null.sql
