[project]
name = "pokemon-tcgp-data-lake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.9",
    "pyarrow>=19.0.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "selectolax>=0.3.27",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
