[project]
name = "pokemon-tcgp-data-lake-workspace"
version = "0.1.0"
description = "Monorepo for Pokemon TCG Data Lake"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
workspace = { members = ["ingestion", "semantic_layer", "pokemon_cli", "transformations"] }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.10",
    "sqlfluff>=3.3.0",
    "sqlfluff-templater-dbt>=3.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
